Construo 0.2.0
==============

 * Fixed id-overlap bug which caused construction to get corrput
  (wrong particles connected together)

 * added zooming plus mouse-wheel support

 * added scrolling with cursorkeys and mouse

 * added simple GUI

 * House of Horror Part1 and Part2 added
 
 * fullscreen support added

 * moving of objects is possible 

 * rotation of objects is possible
 
 * added optional glut support for hardware accelerated OpenGL

 * fixed particle physics, particle mass now has an impact


Construo 0.1.0
==============

 * fixed-particles are now possible
 
 * in-game help screen available

 * removal of particles is possible

 * rewind to the state before the 'run' is possible (aka undo)

 * rewritten to use only plain Xlib, no additional libraries required

 * XML is replaced by s-expressions, this removes another library
   dependency and results in better readable files

 * added a bunch of example files

 * added abstraction layer, ports to other libraries or OSs should be
   quite easy (OpenGL port might follow sooner or later)


# EOF #